--- a/Matplotlib.ipynb
+++ b/Matplotlib.ipynb
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9d45003f",
+   "id": "a1939c82",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ed9e1cb3",
+   "id": "d1cb527f",
    "metadata": {},
    "outputs": [
     {
@@ -1154,13 +1154,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4869e076",
+   "id": "b7623329",
    "metadata": {},
    "source": [
     "### Which one should you use? (pyplot vs matplotlib OO method)\n",
     "* When plotting something quickly, okay to use the pyplot method\n",
-    "* When plotting something more advanced, use the OO "
+    "* When plotting something more advanced, use the OO method"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3bae1fec",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'over_50' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m over_50\u001b[38;5;241m.\u001b[39mplot(kind\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscatter\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      2\u001b[0m              x\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m              y\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchol\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      4\u001b[0m              c\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'over_50' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "over_50 = heart_disease[heart_disease[\"age\"]>50]\n",
+    "over_50.head()\n",
+    ".plot(kind='scatter',\n",
+    "             x='age',\n",
+    "             y='chol',\n",
+    "             c='target');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b671d598",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
