added a horizontal line

--- a/Matplotlib.ipynb
+++ b/Matplotlib.ipynb
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a027e59b",
+   "id": "4eb15e11",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "065ea082",
+   "id": "0da13c1f",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5fb082",
+   "id": "b9c249d0",
    "metadata": {},
    "source": [
     "### Which one should you use? (pyplot vs matplotlib OO method)\n",
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ab02e16b",
+   "id": "b4f983ab",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a01baad4",
+   "id": "f0d1105b",
    "metadata": {},
    "outputs": [
     {
@@ -1221,13 +1221,17 @@
     "       ylabel=\"Cholesterol\");\n",
     "\n",
     "# Add a legend\n",
-    "ax.legend(*scatter.legend_elements(),title=\"Target\");"
+    "ax.legend(*scatter.legend_elements(),title=\"Target\");\n",
+    "\n",
+    "# Add horizontal line\n",
+    "ax.axhline(over_50[\"chol\"].mean(),\n",
+    "           linesty)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e95e9d1",
+   "id": "33b2b6f6",
    "metadata": {},
    "outputs": [],
    "source": []
