--- a/Scikit-Learn.ipynb
+++ b/Scikit-Learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "895fc3a3",
+   "id": "6769771f",
    "metadata": {},
    "source": [
     "# Introduction to Scikit-Learn (sklearn)\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace65ef8",
+   "id": "2bf87af6",
    "metadata": {},
    "source": [
     "Index:\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b60a0fc2",
+   "id": "5c49e5c9",
    "metadata": {},
    "source": [
     "##  0.An end-to-end Scikit-Learn workflow"
@@ -35,8 +35,591 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "0f1428e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>354</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>241</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>123</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>110</td>\n",
+       "      <td>264</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>132</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>68</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>144</td>\n",
+       "      <td>193</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>141</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>131</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>115</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>303 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+       "0     63    1   3       145   233    1        0      150      0      2.3   \n",
+       "1     37    1   2       130   250    0        1      187      0      3.5   \n",
+       "2     41    0   1       130   204    0        0      172      0      1.4   \n",
+       "3     56    1   1       120   236    0        1      178      0      0.8   \n",
+       "4     57    0   0       120   354    0        1      163      1      0.6   \n",
+       "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
+       "298   57    0   0       140   241    0        1      123      1      0.2   \n",
+       "299   45    1   3       110   264    0        1      132      0      1.2   \n",
+       "300   68    1   0       144   193    1        1      141      0      3.4   \n",
+       "301   57    1   0       130   131    0        1      115      1      1.2   \n",
+       "302   57    0   1       130   236    0        0      174      0      0.0   \n",
+       "\n",
+       "     slope  ca  thal  target  \n",
+       "0        0   0     1       1  \n",
+       "1        0   0     2       1  \n",
+       "2        2   0     2       1  \n",
+       "3        2   0     2       1  \n",
+       "4        2   0     2       1  \n",
+       "..     ...  ..   ...     ...  \n",
+       "298      1   0     3       0  \n",
+       "299      1   0     3       0  \n",
+       "300      1   2     3       0  \n",
+       "301      1   1     3       0  \n",
+       "302      1   1     2       0  \n",
+       "\n",
+       "[303 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. Getting the data ready\n",
+    "import pandas as pd\n",
+    "heart_disease = pd.read_csv(\"heart-disease.csv\")\n",
+    "heart_disease"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2c922df6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create X (features)\n",
+    "x = heart_disease.drop(\"target\", axis=1)\n",
+    "\n",
+    "#Create Y (labels)\n",
+    "y = heart_disease[\"target\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "77c5cb7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap': True,\n",
+       " 'ccp_alpha': 0.0,\n",
+       " 'class_weight': None,\n",
+       " 'criterion': 'gini',\n",
+       " 'max_depth': None,\n",
+       " 'max_features': 'sqrt',\n",
+       " 'max_leaf_nodes': None,\n",
+       " 'max_samples': None,\n",
+       " 'min_impurity_decrease': 0.0,\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 2,\n",
+       " 'min_weight_fraction_leaf': 0.0,\n",
+       " 'n_estimators': 100,\n",
+       " 'n_jobs': None,\n",
+       " 'oob_score': False,\n",
+       " 'random_state': None,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. Choose the right model and hyperparameters\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "clf = RandomForestClassifier(n_estimators=100)\n",
+    "\n",
+    "# Keeping the deafult hyperparameters\n",
+    "clf.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d54b174f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Fit the model to the trainning data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6cb6ce7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf.fit(x_train, y_train);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "702b1b7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0,\n",
+       "       0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0,\n",
+       "       0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# make a prediction\n",
+    "y_preds = clf.predict(x_test)\n",
+    "y_preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a2ca1ced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265    0\n",
+       "110    1\n",
+       "76     1\n",
+       "55     1\n",
+       "130    1\n",
+       "      ..\n",
+       "228    0\n",
+       "142    1\n",
+       "210    0\n",
+       "153    1\n",
+       "171    0\n",
+       "Name: target, Length: 61, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7fee5024",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Evaluate the model\n",
+    "clf.score(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "52be281f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.819672131147541"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9e67db9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.73      0.78        26\n",
+      "           1       0.82      0.89      0.85        35\n",
+      "\n",
+      "    accuracy                           0.82        61\n",
+      "   macro avg       0.82      0.81      0.81        61\n",
+      "weighted avg       0.82      0.82      0.82        61\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "print(classification_report(y_test, y_preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bf8e1f51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[19,  7],\n",
+       "       [ 4, 31]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "787fae27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.819672131147541"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7262ce6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trying model with 10 estimators...\n",
+      "Model accuracy on test set: 81.97%\n",
+      "Trying model with 20 estimators...\n",
+      "Model accuracy on test set: 81.97%\n",
+      "Trying model with 30 estimators...\n",
+      "Model accuracy on test set: 83.61%\n",
+      "Trying model with 40 estimators...\n",
+      "Model accuracy on test set: 85.25%\n",
+      "Trying model with 50 estimators...\n",
+      "Model accuracy on test set: 81.97%\n",
+      "Trying model with 60 estimators...\n",
+      "Model accuracy on test set: 83.61%\n",
+      "Trying model with 70 estimators...\n",
+      "Model accuracy on test set: 80.33%\n",
+      "Trying model with 80 estimators...\n",
+      "Model accuracy on test set: 85.25%\n",
+      "Trying model with 90 estimators...\n",
+      "Model accuracy on test set: 81.97%\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Improve a model\n",
+    "# Try different amount of n_estimators\n",
+    "np.random.seed(42)\n",
+    "for i in range(10, 100, 10):\n",
+    "    print(f\"Trying model with {i} estimators...\")\n",
+    "    clf = RandomForestClassifier(n_estimators=i).fit(x_train, y_train)\n",
+    "    print(f\"Model accuracy on test set: {clf.score(x_test, y_test) * 100:.2f}%\")\n",
+    "print(\" \") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3130227c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. save a model and load it\n",
+    "import pickle\n",
+    "pickle.dump(clf,open(\"random_forest_model_1.pkl\",\"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d2224d19",
+   "id": "60265930",
    "metadata": {},
    "outputs": [],
    "source": []
