--- a/Scikit-Learn.ipynb
+++ b/Scikit-Learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6769771f",
+   "id": "36da88b5",
    "metadata": {},
    "source": [
     "# Introduction to Scikit-Learn (sklearn)\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf87af6",
+   "id": "26d614d6",
    "metadata": {},
    "source": [
     "Index:\n",
@@ -26,8 +26,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0d5c3261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standard Imports\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5c49e5c9",
+   "id": "f08c1ef7",
    "metadata": {},
    "source": [
     "##  0.An end-to-end Scikit-Learn workflow"
@@ -35,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0f1428e0",
+   "execution_count": 2,
+   "id": "38fc8db5",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +313,7 @@
        "[303 rows x 14 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2c922df6",
+   "execution_count": 3,
+   "id": "bae85baa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,8 +341,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "77c5cb7b",
+   "execution_count": 4,
+   "id": "65ce4144",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +368,7 @@
        " 'warm_start': False}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,8 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d54b174f",
+   "execution_count": 5,
+   "id": "42589550",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,8 +396,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6cb6ce7d",
+   "execution_count": 6,
+   "id": "5cef4557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,19 +406,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "702b1b7c",
+   "execution_count": 7,
+   "id": "5a61a94f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0,\n",
-       "       0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0,\n",
-       "       0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1])"
+       "array([0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1,\n",
+       "       1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1,\n",
+       "       1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,28 +432,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a2ca1ced",
+   "execution_count": 8,
+   "id": "09ab4777",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "265    0\n",
+       "214    0\n",
+       "240    0\n",
+       "133    1\n",
        "110    1\n",
-       "76     1\n",
-       "55     1\n",
-       "130    1\n",
+       "287    0\n",
        "      ..\n",
-       "228    0\n",
-       "142    1\n",
-       "210    0\n",
-       "153    1\n",
-       "171    0\n",
+       "17     1\n",
+       "45     1\n",
+       "258    0\n",
+       "256    0\n",
+       "100    1\n",
        "Name: target, Length: 61, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,8 +464,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7fee5024",
+   "execution_count": 9,
+   "id": "6500a45d",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +474,7 @@
        "1.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,17 +486,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "52be281f",
+   "execution_count": 10,
+   "id": "4c4d9939",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.819672131147541"
+       "0.7868852459016393"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,8 +507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9e67db9e",
+   "execution_count": 11,
+   "id": "abed6fc1",
    "metadata": {},
    "outputs": [
     {
@@ -503,12 +517,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.73      0.78        26\n",
-      "           1       0.82      0.89      0.85        35\n",
+      "           0       0.75      0.72      0.73        25\n",
+      "           1       0.81      0.83      0.82        36\n",
       "\n",
-      "    accuracy                           0.82        61\n",
-      "   macro avg       0.82      0.81      0.81        61\n",
-      "weighted avg       0.82      0.82      0.82        61\n",
+      "    accuracy                           0.79        61\n",
+      "   macro avg       0.78      0.78      0.78        61\n",
+      "weighted avg       0.79      0.79      0.79        61\n",
       "\n"
      ]
     }
@@ -520,18 +534,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "bf8e1f51",
+   "execution_count": 12,
+   "id": "8270b019",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[19,  7],\n",
-       "       [ 4, 31]])"
+       "array([[18,  7],\n",
+       "       [ 6, 30]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,17 +556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "787fae27",
+   "execution_count": 13,
+   "id": "dd7467ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.819672131147541"
+       "0.7868852459016393"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,8 +577,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "7262ce6e",
+   "execution_count": 14,
+   "id": "003d789c",
    "metadata": {},
    "outputs": [
     {
@@ -572,23 +586,23 @@
      "output_type": "stream",
      "text": [
       "Trying model with 10 estimators...\n",
-      "Model accuracy on test set: 81.97%\n",
+      "Model accuracy on test set: 78.69%\n",
       "Trying model with 20 estimators...\n",
-      "Model accuracy on test set: 81.97%\n",
+      "Model accuracy on test set: 73.77%\n",
       "Trying model with 30 estimators...\n",
-      "Model accuracy on test set: 83.61%\n",
+      "Model accuracy on test set: 78.69%\n",
       "Trying model with 40 estimators...\n",
-      "Model accuracy on test set: 85.25%\n",
+      "Model accuracy on test set: 80.33%\n",
       "Trying model with 50 estimators...\n",
-      "Model accuracy on test set: 81.97%\n",
+      "Model accuracy on test set: 78.69%\n",
       "Trying model with 60 estimators...\n",
-      "Model accuracy on test set: 83.61%\n",
+      "Model accuracy on test set: 81.97%\n",
       "Trying model with 70 estimators...\n",
       "Model accuracy on test set: 80.33%\n",
       "Trying model with 80 estimators...\n",
-      "Model accuracy on test set: 85.25%\n",
+      "Model accuracy on test set: 83.61%\n",
       "Trying model with 90 estimators...\n",
-      "Model accuracy on test set: 81.97%\n",
+      "Model accuracy on test set: 80.33%\n",
       " \n"
      ]
     }
@@ -606,8 +620,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "3130227c",
+   "execution_count": 15,
+   "id": "c192cf50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,8 +632,229 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "4693f007",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "System:\n",
+      "    python: 3.11.5 (main, Sep 11 2023, 08:31:25) [Clang 14.0.6 ]\n",
+      "executable: /Users/soumo141/anaconda3/bin/python\n",
+      "   machine: macOS-14.4.1-arm64-arm-64bit\n",
+      "\n",
+      "Python dependencies:\n",
+      "      sklearn: 1.3.0\n",
+      "          pip: 23.2.1\n",
+      "   setuptools: 68.0.0\n",
+      "        numpy: 1.24.3\n",
+      "        scipy: 1.11.3\n",
+      "       Cython: None\n",
+      "       pandas: 2.1.1\n",
+      "   matplotlib: 3.8.0\n",
+      "       joblib: 1.2.0\n",
+      "threadpoolctl: 2.2.0\n",
+      "\n",
+      "Built with OpenMP: True\n",
+      "\n",
+      "threadpoolctl info:\n",
+      "       filepath: /Users/soumo141/anaconda3/lib/libopenblasp-r0.3.21.dylib\n",
+      "         prefix: libopenblas\n",
+      "       user_api: blas\n",
+      "   internal_api: openblas\n",
+      "        version: 0.3.21\n",
+      "    num_threads: 8\n",
+      "threading_layer: pthreads\n",
+      "   architecture: armv8\n",
+      "\n",
+      "       filepath: /Users/soumo141/anaconda3/lib/libomp.dylib\n",
+      "         prefix: libomp\n",
+      "       user_api: openmp\n",
+      "   internal_api: openmp\n",
+      "        version: None\n",
+      "    num_threads: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "sklearn.show_versions()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65247699",
+   "metadata": {},
+   "source": [
+    "## 1. Getting data ready to be used with machine learning \n",
+    "Three main things to do:\n",
+    "   * 1.Split the data into features and labels (usually 'x' & 'y')\n",
+    "   * 2.Filling (also called imputing) or disregarding missing values\n",
+    "   * 3.Converting non-numerical values to numerical values (also called feature encoding)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9cb4d57",
+   "metadata": {},
+   "source": [
+    "### 1.1 Make sure it's all numerical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fe2689de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>White</td>\n",
+       "      <td>35431</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>192714</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>White</td>\n",
+       "      <td>84714</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>154365</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>181577</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14043</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors  Price\n",
+       "0   Honda  White          35431      4  15323\n",
+       "1     BMW   Blue         192714      5  19943\n",
+       "2   Honda  White          84714      4  28343\n",
+       "3  Toyota  White         154365      4  13434\n",
+       "4  Nissan   Blue         181577      3  14043"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_sales = pd.read_csv(\"car-sales-extended.csv\")\n",
+    "car_sales.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e8fe91b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(car_sales)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b3c3e106",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Make             object\n",
+       "Colour           object\n",
+       "Odometer (KM)     int64\n",
+       "Doors             int64\n",
+       "Price             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_sales.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "60265930",
+   "id": "7863950e",
    "metadata": {},
    "outputs": [],
    "source": []
