building the model

--- a/Scikit-Learn.ipynb
+++ b/Scikit-Learn.ipynb
@@ -413,9 +413,9 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1,\n",
-       "       1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1,\n",
-       "       1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1])"
+       "array([1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0,\n",
+       "       0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0])"
       ]
      },
      "execution_count": 7,
@@ -439,17 +439,17 @@
     {
      "data": {
       "text/plain": [
-       "214    0\n",
-       "240    0\n",
-       "133    1\n",
-       "110    1\n",
-       "287    0\n",
+       "6      1\n",
+       "86     1\n",
+       "2      1\n",
+       "138    1\n",
+       "185    0\n",
        "      ..\n",
-       "17     1\n",
-       "45     1\n",
-       "258    0\n",
-       "256    0\n",
-       "100    1\n",
+       "296    0\n",
+       "140    1\n",
+       "162    1\n",
+       "52     1\n",
+       "284    0\n",
        "Name: target, Length: 61, dtype: int64"
       ]
      },
@@ -493,7 +493,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7868852459016393"
+       "0.8032786885245902"
       ]
      },
      "execution_count": 10,
@@ -517,12 +517,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.75      0.72      0.73        25\n",
-      "           1       0.81      0.83      0.82        36\n",
+      "           0       0.79      0.79      0.79        28\n",
+      "           1       0.82      0.82      0.82        33\n",
       "\n",
-      "    accuracy                           0.79        61\n",
-      "   macro avg       0.78      0.78      0.78        61\n",
-      "weighted avg       0.79      0.79      0.79        61\n",
+      "    accuracy                           0.80        61\n",
+      "   macro avg       0.80      0.80      0.80        61\n",
+      "weighted avg       0.80      0.80      0.80        61\n",
       "\n"
      ]
     }
@@ -541,8 +541,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[18,  7],\n",
-       "       [ 6, 30]])"
+       "array([[22,  6],\n",
+       "       [ 6, 27]])"
       ]
      },
      "execution_count": 12,
@@ -563,7 +563,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7868852459016393"
+       "0.8032786885245902"
       ]
      },
      "execution_count": 13,
@@ -588,21 +588,21 @@
       "Trying model with 10 estimators...\n",
       "Model accuracy on test set: 78.69%\n",
       "Trying model with 20 estimators...\n",
-      "Model accuracy on test set: 73.77%\n",
+      "Model accuracy on test set: 75.41%\n",
       "Trying model with 30 estimators...\n",
-      "Model accuracy on test set: 78.69%\n",
-      "Trying model with 40 estimators...\n",
-      "Model accuracy on test set: 80.33%\n",
-      "Trying model with 50 estimators...\n",
-      "Model accuracy on test set: 78.69%\n",
-      "Trying model with 60 estimators...\n",
       "Model accuracy on test set: 81.97%\n",
+      "Trying model with 40 estimators...\n",
+      "Model accuracy on test set: 78.69%\n",
+      "Trying model with 50 estimators...\n",
+      "Model accuracy on test set: 80.33%\n",
+      "Trying model with 60 estimators...\n",
+      "Model accuracy on test set: 78.69%\n",
       "Trying model with 70 estimators...\n",
-      "Model accuracy on test set: 80.33%\n",
+      "Model accuracy on test set: 81.97%\n",
       "Trying model with 80 estimators...\n",
-      "Model accuracy on test set: 83.61%\n",
-      "Trying model with 90 estimators...\n",
       "Model accuracy on test set: 80.33%\n",
+      "Trying model with 90 estimators...\n",
+      "Model accuracy on test set: 81.97%\n",
       " \n"
      ]
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "fe2689de",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
        "4  Nissan   Blue         181577      3  14043"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "e8fe91b1",
    "metadata": {},
    "outputs": [
@@ -816,7 +816,7 @@
        "1000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "b3c3e106",
    "metadata": {},
    "outputs": [
@@ -842,7 +842,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,8 +853,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "7863950e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split into x/y\n",
+    "x = car_sales.drop(\"Price\", axis=1)\n",
+    "y = car_sales[\"Price\"]\n",
+    "\n",
+    "# Split into trainning and test\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,\n",
+    "                                                    y,\n",
+    "                                                    test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91cffe6f",
    "metadata": {},
    "outputs": [],
    "source": []
