--- a/Scikit-Learn.ipynb
+++ b/Scikit-Learn.ipynb
@@ -4393,7 +4393,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0d4a3a95",
+   "id": "264235ac",
    "metadata": {},
    "outputs": [
     {
@@ -4414,7 +4414,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "9f26daad",
+   "id": "869a7b6b",
    "metadata": {},
    "outputs": [
     {
@@ -4435,7 +4435,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "63133f8c",
+   "id": "f23f56e7",
    "metadata": {},
    "outputs": [
     {
@@ -4464,34 +4464,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "ae9855ae",
+   "execution_count": 77,
+   "id": "507391d8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "ClassifierMixin.score() missing 2 required positional arguments: 'X' and 'y'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[76], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Default scoring parameter of classifier = mean accuracy\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mclf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscore\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Scoring parameter set to None by default\u001b[39;00m\n\u001b[1;32m      5\u001b[0m cross_val_score(clf, x, y, cv\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, scoring\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: ClassifierMixin.score() missing 2 required positional arguments: 'X' and 'y'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0.78688525, 0.86885246, 0.80327869, 0.78333333, 0.76666667])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Default scoring parameter of classifier = mean accuracy\n",
-    "clf.score()\n",
+    "# clf.score()\n",
     "\n",
     "# Scoring parameter set to None by default\n",
     "cross_val_score(clf, x, y, cv=5, scoring=None)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fad9f7f6",
+   "metadata": {},
+   "source": [
+    "### 4.2.1 Classification model evaluation metrics\n",
+    "\n",
+    "1. Accuracy\n",
+    "2. Area under ROC curve\n",
+    "3. Confusion matrix\n",
+    "4. Classification report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "547d684f",
+   "metadata": {},
+   "source": [
+    "#### Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "757aafe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "x = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"] \n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators=100)\n",
+    "                             \n",
+    "clf_cross_val_score = np.mean(cross_val_score(clf, x, y, cv=5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "a2d3cfef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8183060109289617"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " np.mean(cross_val_score(clf, x, y, cv=5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "b956f150",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Heart Disease Classifier Cross-Validated Accuracy: 83.82%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Heart Disease Classifier Cross-Validated Accuracy: {np.mean(cross_val_score(clf, x, y, cv=5)) *100:.2f}%\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e941a957",
+   "id": "d91ab0b1",
    "metadata": {},
    "outputs": [],
    "source": []
